--- a/index.html
+++ b/index.html
@@ -495,12 +495,12 @@
       
       <a href="https://golf021.github.io/picroof_by_GOLF/" target="_blank" class="card">
         <img src="https://i.postimg.cc/26s1JmH4/dji-fly-20230520-161306-238-1684574294052-photo-optimized.jpg" alt="ภาพหลังคา" class="card-image">
-        <span class="card-title">ภาพมุงหลังคา</span>
+        <span class="card-title">ภาพมุงหลังคา Demo</span>
       </a>
 
       <a href="https://www.tiktok.com/@golf..roof" target="_blank" class="card">
         <img src="https://i.postimg.cc/MKYvtJvL/apps-4784-13634052595610511-c45457c9-b4af-46b0-8e61-8d7c0aec3f56.png" alt="TikTok" class="card-image">
-        <span class="card-title">TikTok</span>
+        <span class="card-title">TikTok หลังคา</span>
       </a>
  
       <a href="https://drive.google.com/drive/folders/1Eat68WK3s-2pHkBFhpLUNDJ6vCnZaSGA" target="_blank" class="card">
