--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <span class="card-title">CMS 2.0</span>
       </a>
       
-      <a href="https://docs.google.com/spreadsheets/d/13lRuHOcs5g9eEjkIhaHM7FkUVjkFgDKQ4JlwgM0XYjc/edit" target="_blank" class="card">
+      <a href="https://docs.google.com/spreadsheets/d/13lRuHOcs5g9eEjkIhaHM7FkUVjkFgDKQ4JlwgM0XYjc/edit?gid=432688577#gid=432688577" target="_blank" class="card">
         <img src="https://i.postimg.cc/TYtQYrCR/Untitled.png" alt="Excel" class="card-image">
         <span class="card-title">ติดตามขาย</span>
       </a>
