--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
   
   <div class="container">
     <div class="header">
-      <h1 class="logo">ALL TOOL</h1>
+      <h1 class="logo">ALL TOOL กด F11 เพื่ออรรถรสในการใช้งาน</h1>
       <p class="subtitle">เครื่องมือทำงาน</p>
     </div>
     
